--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,13 @@
 
 <h1>Articles</h1>
 
+<%= cl_image_tag("q9sutczkqsfi0mgcqlm0",
+      width: 400, height: 300, crop: :fill) %>
+
+<!-- for face detection -->
+<%= cl_image_tag("q9sutczkqsfi0mgcqlm0",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 <table>
   <thead>
     <tr>
@@ -10,6 +17,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+
 
   <tbody>
     <% @articles.each do |article| %>
