--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,19 @@
   <strong>Body:</strong>
   <%= @article.body %>
 </p>
+<br><br>
 
+         <%# this is when you want image to be uploaded as normal image %>
+  <div>
+      <%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+  </div>
+  <br><br>
+          <%# this is for when you want image as background %>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @article.photo.key, height: 300,width: 400, crop: :fill %>')">
+  Cool article
+</div>
+
+<br><br>
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', root_path %>
