--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,15 +13,17 @@
 
          <%# this is when you want image to be uploaded as normal image %>
   <div>
-      <%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+      <% @article.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400 %>
+      <% end %>
   </div>
   <br><br>
           <%# this is for when you want image as background %>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @article.photo.key, height: 300,width: 400, crop: :fill %>')">
-  Cool article
-</div>
+  <%# <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @article.photo.key, height: 300,width: 400, crop: :fill')"> %>
+  <%# Cool article
+  </div>  %>
 
 <br><br>
-<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', root_path %>
